# cos-backend

./: .coveragerc  .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  .taskmasterconfig  ACCEPTANCE_CRITERIA_COMPLIANCE_MATRIX.md  AGENT_ASSIGNMENTS_89_97.md  CC_GOLD_STANDARD_COMPLETE.md  CHAT_B_SURGICAL_PROMPT.md  CHAT_C_SURGICAL_PROMPT.md  CI_FAILURE_ANALYSIS_AND_FIX.md  CI_FIXES_SUMMARY.md  CI_FIX_PROGRESS.md  CI_PRAGMATIC_CHANGES_SUMMARY.md  CI_PRAGMATIC_STANDARDS.md  CI_PRAGMATIC_STANDARDS_SUMMARY.md  CI_Strict_Enforcement_Fix_List.md  CI_VISION.md  CLAUDE.md  CONTEXT_HANDOFF.md  COS_CONSTITUTION.md  COVERAGE_ELEVATION_PLAN_89_97.md  COVERAGE_TRACKING_DASHBOARD.md  EXECUTIVE_SUMMARY_PHASE_2_SPRINT_2.md  INTEGRATION_TEST_MODE_SOLUTION.md  LIVING_PATTERNS_PHASE1_CONTEXT.md  NEXT_CONTEXT_PROMPT.md  ORCHESTRATION_PROMPT_NEXT.md  PATTERN_ADR_REVIEW_REPORT.md  PHASE_2_CI_CLEANUP_ROADMAP.md  PHASE_2_SINGLE_DEV_OPTIMIZATION_PLAN.md  PHASE_2_SPRINT_2_COORDINATION.md  PROGRESS_CC_GOLD_STANDARD.md  README.md  RELEASE_PHASE2_SPRINT2_REPORT.md  SPRINT3_CONTEXT.md  SPRINT_2_CI_CLEANUP_NOTES.md  SQLALCHEMY_TEST_ISOLATION_FIX.md  TASK_15_2_COMPLETION_SUMMARY.md  (+15 more)
.backlog/: config.yml
.cursor/adr/: ADR-001-strangler-refactor-strategy.md  ADR-002-living-patterns-system.md
.cursor/rules/: README.md  app_entrypoint.mdc.yaml  backend.mdc.yaml  backend.projectrules.yaml  backend_module.mdc.yaml  backend_module_structure.mdc.yaml  canonical_db_layer.mdc.yaml  cc_module.mdc.yaml  changelog.md  ci_test_processor.mdc  cursor_dev_protocol.mdc.yaml  cursor_memory.py  env_workflow.mdc.yaml  frontend_init_setup.mdc.yaml  frontend_init_setup.projectrules.yaml  frontend_modules_dev.mdc.yaml  frontend_modules_dev.projectrules.yaml  logger_usage.mdc.yaml  mem0_module.mdc.yaml  mem0g_module.mdc.yaml  modules.mdc.yaml  modules.projectrules.yaml  python-best-practices.mdc.yaml  self_improve.mdc  taskmaster.mdc  test_pattern.mdc.yaml  uv_usage.mdc.yaml
.github/workflows/: ci.yml  integration.yml  performance.yml  redis-integration.yml
.prompt_guides/: cursor_memory_pattern.md  dev_module_create.md  pem_identity_prompt.md  prompt_review_protocol.md  taskmaster_handshake.md  tdd_loop_prompt.md
.roo/rules/: ci_test_processor.md  dev_workflow.md  self_improve.md  taskmaster.md
.taskmaster/: config.json  state.json
.taskmaster/docs/: cos_phase2_sprint_1.md  prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster_ai/: cc_test_plan.yaml  cursor_memory_refactor.yaml  pem_log_chain.yaml
docs/: 000_cos_constitution_and_soul_v1.1.md  000_current_sprint_context.md  001_cos_architecture_and_standards_v1.1.md  001_module_standards.md  002_cos_memory_and_graph_layers_v1.1.md  002_database_patterns.md  003_cos_philosophy_and_vision_v1.1.md  003_testing_requirements.md  004_current_task_constraints.md  010_cos_execution_blueprint_cc_v1.0.md  011_module_template_reference_v1.1.md  COS_CODEBASE_ANALYSIS_v1.0.md  COS_CODEBASE_ANALYSIS_v1.1.md  COS_PROGRESS_SCORECARD.md  CURSOR_SCRIPTS_CLEANUP_CONTEXT.md  PHASE_1_CI_RESOLUTION_CONTEXT.md  PHASE_1_CI_RESOLUTION_PLAN.md  PHASE_2_AGENTIC_SUBSTRATE_BLUEPRINT_v1.0.md  PHASE_2_AGENTIC_SUBSTRATE_BLUEPRINT_v1.1.md  PHASE_2_AGENTIC_SUBSTRATE_BLUEPRINT_v1.2.md  PHASE_2_SPRINT_2_OUTLINE.md  PHASE_2_TECHNICAL_DEBT.md  PHASE_2_TECHNICAL_DEBT_HISTORY.md  PHASE_2_TECHNICAL_DEBT_PLAN.md  ci-migration.md  ci.md  gold_standard_transformation.md  infra.md  qdrant-migration.md  technical_debt.md
docs/foundation/: 000_cos_constitution.md  00_cos_soul.md  0_cos_architecture.md  cos_dev_standards.md  cos_implementation_plan.md  cos_memory_layers.yaml  module_template.yaml  quotes.yaml
docs/philosophy/: quantum_autopoiesis.md
infrastructure/: .cleanup-log  .env.ci  .env.example  COMMANDS.md  README.dev.cos.md  README.dev.pipeline.md  STATUS.md  docker-compose.mem0g.yml  docker-compose.override.yml.macos  docker-compose.override.yml.windows  docker-compose.traefik.yml  docker-compose.yml  preflight_checklist.md  redis.conf  setup-platform.ps1  setup-platform.sh  start-cos.ps1  stop-cos.ps1  traefik.yml
mem0/: mem0_manifest.md  requirements.txt
scripts/: check_mcp_filename_drift.py  ci_check.ps1  ci_check.sh  generate_module.py  run_performance_tests.py
src/: __init__.py  cos_main.py
src/common/: base_subscriber.py  config.py  database.py  ledger_view.py  logger.py  logger_logfire.py  mem0_client.py  message_format.py  pubsub.py  qdrant_config.py  rate_limiter.py  redis_config.py  redis_health_monitor.py  request_id_middleware.py
src/core_v2/: __init__.py
src/db/: README.db.md  __init__.py  agent_instructions.md  base.py  connection.py
src/graph/: __init__.py  background.py  base.py  registry.py  router.py  service.py
src/infrastructure/: Dockerfile.postgres  docker-compose.mem0.yml  docker-compose.yml
tests/: CLAUDE.md  conftest.py  conftest_db.py  helpers.py  infrastructure_check.py  skipped_tests_analysis.md  sprint_boundary_management.yaml
tests/TODO/: RUFF_FIXES_COMPLETED.md  failing_tests.md  needs_improvement.md  todo_list.md
tests/_utils/: __init__.py  db_mocks.py
tests/backend/: test_cc.py
tests/common/: __init__.py  conftest.py  db_test_helpers.py  error_helpers.py  router_helpers.py  test_base_subscriber.py  test_base_subscriber_coverage.py  test_combined.py  test_config.py  test_config_coverage.py  test_database.py  test_database_coverage.py  test_db_helpers.py  test_error_helpers.py  test_imports.py  test_ledger_view.py  test_ledger_view_complete.py  test_logger.py  test_logger_complete.py  test_logger_logfire_coverage.py  test_mem0_client.py  test_message_format.py  test_message_format_coverage.py  test_pattern_integrations.py  test_pubsub.py  test_pubsub_characterisation.py  test_pubsub_circuit_breaker.py  test_pubsub_coverage_99.py  test_pubsub_simple.py  test_redis_config.py  test_redis_config_coverage.py  test_redis_health_monitor.py  test_router_helpers.py
tests/db/: test_alembic_migrations.py  test_connection.py  test_connection_edge_cases.py  test_env_comprehensive.py  test_env_direct_coverage.py  (+2 more)
(+171 files in other folders)
